--- a/backend/package.json
+++ b/backend/package.json
@@ -4,17 +4,33 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "nodemonConfig": {
+    "watch": [
+      "express-server.ts",
+      "src/"
+    ],
+    "ext": "ts",
+    "ignore": [
+      "*.test.ts"
+    ],
+    "delay": "3",
+    "execMap": {
+      "ts": "ts-node"
+    }
+  },
   "scripts": {
-    "start": "ts-node-esm express-server.ts",
+    "start": "nodemon --esm express-server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "ts-node": "^10.9.1"
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1"
   }
 }
