--- a/backend/package.json
+++ b/backend/package.json
@@ -25,10 +25,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
