--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,6 @@
   "type": "module",
   "nodemonConfig": {
     "watch": [
-      "express-server.ts",
       "src/"
     ],
     "ext": "ts",
@@ -19,13 +18,15 @@
     }
   },
   "scripts": {
-    "start": "nodemon --esm express-server.ts",
+    "start": "nodemon -x npm run watch:serve",
+    "watch:serve": "node --loader ts-node/esm ./src/express-server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1"
   },
